# pysoc

./: pyproject.toml  readme.md  setup.py
examples/: tcp4.py  tcp_packet.py
source/: pysoc.c
