[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysoc"
version = "1.0"
description = "pysoc - streamline packet building in pysoc"
authors = [{ name = "Nathan Mentze", email = "natementze@gmail.com" }]

[project.license]
text = "The Unlicense"

[project.optional-dependencies]
dev = [
    "pytest"
]
